# fmtx

./: Cargo.toml  README.md
src/: convert.rs  format.rs  main.rs
tests/: cli.rs
