[package]
name = "fmtx"
version = "0.1.0"
edition = "2021"
description = "A data-format interconverter (YAML <-> JSON <-> TOML <-> CSV)."
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
toml = "1.1"
csv = "1.4"
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
opt-level = 3
lto = true
